Kapitel 4 hinzugefügt, Kapitel 3 fertig

--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -1,3 +1,34 @@
+@incollection{schulz_quick_2012,
+	address = {Wiesbaden},
+	title = {Quick and easy!? {Fokusgruppen} in der angewandten {Sozialwissenschaft}},
+	isbn = {978-3-531-19397-7},
+	shorttitle = {Quick and easy!?},
+	url = {https://doi.org/10.1007/978-3-531-19397-7_1},
+	abstract = {Fokusgruppen sind ein geeignetes und relativ ressourcenschonendes qualitatives Erhebungsinstrument, um eine begrenzte Anzahl an Bürger in einen Diskursprozess einzubinden. Sie werden vor allem in der drittmittelfinanzierten Sozialforschung eingesetzt, bei der die Ergebnisse schnell zur Verfügung stehen müssen und die Weiterentwicklung der Methodik eine untergeordnete Rolle spielt. Dieser typische Einsatzbereich ist möglicherweise für den Ruf der Fokusgruppen als „quick and easy“ verantwortlich.},
+	language = {de},
+	urldate = {2018-12-30},
+	booktitle = {Fokusgruppen in der empirischen {Sozialwissenschaft}: {Von} der {Konzeption} bis zur {Auswertung}},
+	publisher = {VS Verlag für Sozialwissenschaften},
+	author = {Schulz, Marlen},
+	editor = {Schulz, Marlen and Mack, Birgit and Renn, Ortwin},
+	year = {2012},
+	doi = {10.1007/978-3-531-19397-7_1},
+	pages = {9--22},
+	file = {Springer Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\Z5EHFT2K\\Schulz - 2012 - Quick and easy! Fokusgruppen in der angewandten S.pdf:application/pdf}
+}
+
+@incollection{bohnsack_gruppendiskussionsverfahren_2001,
+	address = {Baltmannsweiler},
+	title = {Gruppendiskussionsverfahren},
+	isbn = {978-3-89676-414-0},
+	language = {Deutsch},
+	booktitle = {Wie kommt {Wissenschaft} zu {Wissen}?, 4 {Bde}., {Bd}.2, {Einführung} in die {Forschungsmethodik} und {Forschungspraxis}},
+	publisher = {Schneider Hohengehren},
+	author = {Bohnsack, R. and Schäffer, B.},
+	month = jan,
+	year = {2001}
+}
+
 @article{spittler_teilnehmende_2001,
 	title = {Teilnehmende {Beobachtung} als {Dichte} {Teilnahme}},
 	url = {http://www.ethnologie.uni-bayreuth.de/de/team/Emeriti/Spittler_Gerd/Alle_Publikationen/2001_Teilnehmende_Beobachtung.pdf},
@@ -17,6 +48,30 @@
 	collaborator = {{New York Public Library}},
 	year = {1922},
 	keywords = {Ethnology -- New Guinea}
+}
+
+@book{kuhl_handbuch_2009,
+	address = {Wiesbaden},
+	edition = {1. Auflage},
+	title = {Handbuch {Methoden} der {Organisationsforschung}: quantitative und qualitative {Methoden}},
+	isbn = {978-3-531-15827-3},
+	shorttitle = {Handbuch {Methoden} der {Organisationsforschung}},
+	language = {de},
+	publisher = {VS, Verlag für Sozialwissenschaften},
+	editor = {Kühl, Stefan and Strodtholz, Petra and Taffertshofer, Andreas},
+	year = {2009},
+	note = {OCLC: 361708845},
+	file = {Kühl et al. - 2009 - Handbuch Methoden der Organisationsforschung quan.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\AH89ZLJC\\Kühl et al. - 2009 - Handbuch Methoden der Organisationsforschung quan.pdf:application/pdf}
+}
+
+@article{rottenburg_feldforschung_nodate,
+	title = {Feldforschung in {Unternehmen} - {Ethnographische} {Explorationen} in der eigenen {Gesellschaft}},
+	url = {http://www.academia.edu/33484063/Feldforschung_in_Unternehmen_-_Ethnographische_Explorationen_in_der_eigenen_Gesellschaft},
+	abstract = {Feldforschung in Unternehmen - Ethnographische Explorationen in der eigenen Gesellschaft},
+	language = {en},
+	urldate = {2018-12-28},
+	author = {Rottenburg, Richard},
+	file = {Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\HS35K7U4\\Feldforschung_in_Unternehmen_-_Ethnographische_Explorationen_in_der_eigenen_Gesellschaft.html:text/html}
 }
 
 @article{hevner_design_nodate,
