--- a/Kapitel/Kapitel3.tex
+++ b/Kapitel/Kapitel3.tex
@@ -1,10 +1,43 @@
 \chapter{Methoden}
 
+Dieses Kapitel behandelt die in dieser Arbeit angewandten Methoden zur Erhebung der Daten und Erarbeitung der Lösung zu einem gefundenen Problem. Es soll die Vorgehensweise theoretisch beschreiben und untermauern.
+
 \section{Fokusgruppe}
 
-asdfasf
+Bei einer Fokusgruppe handelt es sich um ein moderiertes Diskursverfahren, bei dem ein Meinungsbild durch die Interaktion einer ausgewählten Gruppe erzeugt wird und somit Daten über ein festgelegtes Thema erhoben werden. Man kann es als Kombination aus fokussiertem Interview und Gruppendiskussion sehen. Als Instrument zur Datenerhebung in den Sozialwissenschaften hat es sich in den 60er und 70er Jahren etabliert. Es wird für folgende Felder verwendet \cite{schulz_quick_2012}:
+
+\begin{itemize}
+	\item Testverfahren
+	\item Analyse an Meinungsvielfalt
+	\item Instrument zur Akzeptanzanalyse
+	\item Instrument zur Konfliktschlichtung
+	\item Evaluierung bestimmter Maßnahmen
+	\item Technikvorausschau
+	\item Analyse heikler Aspekte aus dem Gesundheitsbereich
+\end{itemize}
+
+Normalerweise bestehen die Gruppen aus sechs bis zwölf Personen und einem Moderator. Die Gruppengröße kann jedoch auch erhöht werden, um eine bessere Repräsentanz zu erhalten. Alle Teilnehmer können je nach Ziel der Fokusgruppe zufällig oder nach Kriterien, wie Geschlecht, Lebensstil oder Beruf gewählt werden. Bestenfalls kennen sich die Teilnehmer untereinander nicht. \\
+Der Moderator hat die Aufgabe den Dialog zwischen den Diskutierenden am laufen zu halten. Die Diskussion soll ein lebendiges Gespräch sein, welches von den Teilnehmern getragen und durch den Moderator, der sich an einem Leitfaden als Gedächtnisstütze orientiert, gelenkt wird. Er achtet auch darauf, dass Personen nicht durcheinander reden. Bohnsack und Schäffer legen vier Vorgehensweisen eines guten Moderators fest \cite{bohnsack_gruppendiskussionsverfahren_2001}:
+
+\begin{itemize}
+	\item Unterlassung inhaltlicher Stellungnahmen
+	\item Ansprechen der gesamten Gruppe bei Interventionen
+	\item Fragen nicht an Einzelne, sondern an das Kollektiv richten
+	\item Vermeidung der Individualkommunikation von einzelnen Teilnehmern mit dem Moderator
+\end{itemize}
+
+Der Ablauf einer Fokusgruppe lässt sich in drei Phasen unterteilen \cite{schulz_quick_2012}. Die \textit{erste Phase} dient der inhaltlichen und organisatorischen Vorbereitung der Fokusgruppe. Der Moderator erstellt den Leitfaden und bestimmt und rekrutiert die Gruppe an Personen. Die Fokusgruppe leitet er dann mit einem Film, Bild, einer Homepage oder einem Vortrag ein, um den Teilnehmern das Thema näher zu bringen.\\
+Die Diskussion stellt die \textit{zweite Phase} und die umfangreichste dar. Die Aufgabe des Moderators ist es dabei, das Gespräch anzuregen und dafür zu sorgen, dass jeder Teilnehmer einbezogen wird und aktiv an der Diskussion teilnimmt. Es ist für den Moderator von Vorteil einen Assistenten zu haben, der sich um kleinere Aufgaben und das Protokollieren der Erkenntnisse kümmert. Dies sollte schriftlich festgehalten werden und kann durch Audioaufzeichnungen und/oder Videoaufzeichnungen komplementiert werden. Videos sind dabei mit Vorsicht zu nutzen, da diese das Teilnahmeverhalten der Teilnehmer negativ beeinflussen können. \\
+Das Meinungsspektrum der Gruppe ist dabei das interessante Ergebnis. In der \textit{dritten Phase}, der Datenanalyse und Interpretation der Ergebnisse müssen alle Aufzeichnungen, also schriftliche, Video- und Audioaufnahmen gemeinsam ausgewertet werden. So erhält man eine Sammlung an Meinungen der gesamten Gruppe, welche teilweise repräsentativ für ein bestimmtes Feld sind.
 
 \section{Ethnographie: Teilnehmende Beobachtung}
+
+\textit{``Will man etwas über andere Menschen herausfinden, \\
+	geht man einfach zu ihnen hin, bleibt eine Weile, \\ 
+	macht das mit, was diese Menschen dort normalerweise treiben, \\ 
+	und lernt sie so durch eigene Erfahrung besser kennen.`` - Götz Bachmann} \cite{kuhl_handbuch_2009}
+
+\subsection{Zusammensetzung der Methode}
 
 Es sollen nun Ansatzpunkte gefunden werden, um die Theorie "Handwerker können durch den Einsatz von Technologie unterstützt werden und Zeit sparen" zu stärken. In der Ethnographie unterscheidet man dabei drei Varianten \cite{spittler_teilnehmende_2001}:
 
@@ -28,7 +61,18 @@ Ein Blick fängt oft mehr ein als Worte. Deshalb wird zum Erheben der Informatio
 
 Um die Arbeit eines Handwerkers besser zu verstehen, reicht es nicht sich diese nur von ihm Beschreiben zu lassen. Bei der Ausübung seines Handwerks kann er keine Schritte "verschweigen" und der Forscher kann diese direkt analysieren. Indem er sein Notizheft beiseite legt und selbst mitarbeitet, kann er sich ein genaues Bild des Handwerks machen und so auch kleine Ansatzpunkte zum bekräftigen seiner Theorie finden \cite{malinowski_argonauts_1922}. Deshalb wurde die Teilnehmende Beobachtung als Methode der Ethnographie gewählt.
 
-TODO: Beschreibung Methode
+\subsection{Beschreibung der Methode}
+
+Feldforschung ist eine der ältesten und am weitesten verbreiteten Techniken zur Datenerhebung in einem unbekannten Forschungsgebiet. Die Forschungspraxis hängt dabei in hohem Maße von der \textit{Persönlichkeit der Forschers}, der \textit{Beschaffenheit des Feldes} und der \textit{Interaktion des Forschers mit dem Feld} ab. Das bedeutet die Forschung lässt sich schlecht genau durchplanen und der Forscher kann sie nur begrenzt kontrollieren. Einige Ethnologen argumentieren, dass gerade das den Reiz der Methode ausmacht \cite{rottenburg_feldforschung_nodate}. Andere bezeichnen die teilnehmende Beobachtung deshalb als "methodenfeindlich" \cite{kuhl_handbuch_2009}. Daraus geht hervor, dass es keinen besten Weg gibt diese Methode durchzuführen, nur Anregungen und Tipps.
+
+Zur Datenerhebung sind die Punkte \textit{Forschungsanfang}, \textit{Rollenzuweisung}, \textit{Beobachtungsdauer}, \textit{wo und wie beobachtet wird}, sowie das \textit{Aufschreiben der Erlebnisse} zu beachten \cite{kuhl_handbuch_2009}. Diese werden im Folgenden erläutert. \\
+Der erste Tag im Feld ist laut Bachmann einer der anstrengendsten. Nicht nur Beobachten und die ersten Eindrücke verarbeiten, muss der Forscher an diesem Tag, es kommen auch einige soziale Aufgaben auf ihn zu. Er muss die neuen Kollegen in seinem Forschungsumfeld kennenlernen, sowie überlegen, wie er sich diesen gegenüber gibt. Am besten sollte er sich neutral präsentieren und sich nicht verstellen, um ein nettes Verhältnis den zu Erforschenden gegenüber aufzubauen. Das erzeugt gegenseitiges Vertrauen. Trotzdem sind seine Eindrücke in den ersten Tagen dadurch getrübt. \\
+Meist schlüpft der Forscher hierbei in die Rolle des Praktikanten, der nicht viel kann, viel nachfragt und viel herumkommt. Andere Ansätze erwähnen auch die Rollen Auszubildender, Lehrling oder Trainee, welche jedoch weniger flexibel sind und dem Forscher eine geringere Bewegungsfreiheit bieten. \\
+Im klassischen Sinne wurde eine Ethnographie über einen langen Zeitraum von ca. einem Jahr durchgeführt, was beispielsweise bei der Untersuchung des Arbeitsalltags auf einem Bauernhof Sinn ergab, jedoch in der modernen Forschung kaum mehr tragbar ist. Nun ist eine Dauer von zwei bis sechs Monaten üblich. Auch Zeiträume von einem Tag bis zu ein oder zwei Wochen können schon wertvolle Ergebnisse liefern, wecken jedoch Skepsis bei einigen Ethnologen. \\
+Während der Arbeit beobachtet der Forscher kleine Details, die eventuell bei Gesprächen übergangen, oder nicht ausreichend wörtlich wiedergegeben werden können. Pausen, sowie die Zeit vor und nach der Arbeit, also Daten aus informellen Situationen, werden von einigen Forschern als sehr wichtig angesehen, da sie dem Forscher die Möglichkeit bieten sich mit den Erforschten auszutauschen und neue Kontakte zu knüpfen, über die er wieder neue Erkenntnisse oder Einblicke erlangen kann. Wie er an die besten Daten bekommt ist jedoch immer forschungsabhängig. Organisationsforscher legen dabei mehr Wert auf die Beobachtung der Arbeit. Graaf und Rottenburg \cite{rottenburg_feldforschung_nodate} sprechen hier von "dabeistehender Beobachtung", welche der Forscher ausführt, da er selbst wahrscheinlich nicht die Fähigkeiten besitzt, um die Tätigkeit selbst auszuführen. Er konzentriert sich also auf das Beobachten, Fragen stellen und führt eventuell Hilfstätigkeiten aus. Um spezielle Informationen zu erlangen, kann sich der Ethnologe auf \textit{Konflikte} konzentrieren, welche viel über die Organisation und die involvierten Personen aussagen. Ein anderer Ansatz ist, in "Anbedacht des Unbedeutenden" sein gesamtes Augenmerk auf eine kleine Bagatelle zu richten. Außerdem kann der Forscher einmalige, kleine Situationen herausgreifen und diese anhand des Kontexts und seines erworbenen Wissens analysieren. \\
+Um das Wissen festzuhalten, macht sich der Ethnologe am besten direkt nach einem Sachverhalt Notizen für später, als Erinnerungsstütze. Das hilft ihm beim zweiten Schritt, dem Ausformulieren in einem Forschungstagebuch. Dabei kann er entweder das erlebte sachlich und in der Ausführung präzise beschreiben, oder bereits beim Ausformulieren seine Interpretationen einfließen lassen. Auch das ist wieder abhängig von der betriebenen Forschung. Er sollte sich von Anfang an einen Zitierstil zum kennzeichnen von verschiedenen Zitaten in unterschiedlichen Kontexten aneignen und konsequent durchziehen. Zusätzlich zum Forschungstagebuch kann der Ethnologe ein Tagebuch für \textit{persönliche Gefühle und Erfahrungen}, \textit{Ideen und theoretische Erwägungen} und/oder einen \textit{Forschungskalender}, in den er seine nächsten Schritte einträgt, führen. Oft reicht die Zeit nach Feierabend nicht aus, um alle Erlebnisse nachzutragen, weshalb es auch sinnvoll sein kann sich unter Tags Zeit und einen Platz zum Arbeiten zu schaffen. 
+
+Mit dieser Methode lässt sich ein Beruf analysieren, wobei man nicht alle Einzelheiten festhalten kann. Dadurch ist es dem Forscher möglich Ansatzpunkte für weitere Forschung oder Verbesserungen zu finden.
 
 \section{Gestaltungsorientierte Forschung: Implementieren eines Prototypen}
 
