Fokusgruppe ohne Bilder

--- a/Header/Header.tex
+++ b/Header/Header.tex
@@ -27,6 +27,7 @@
 \usepackage{scrpage2}  % header and footer for KOMA-Script
 \pagestyle{scrheadings}
 \automark[section]{chapter}
+\usepackage{marvosym} % für Euro-Zeichen
 
 % Zitate
 \usepackage[backend=bibtex, style=numeric, sorting=none]{biblatex}
