--- a/Titelseite/Titelseite.tex
+++ b/Titelseite/Titelseite.tex
@@ -7,7 +7,7 @@
 \vspace{3cm}
 
 \begin{center}
-	\includegraphics[scale=0.8]{Titelseite/Logo.pdf}  
+	%\includegraphics[scale=0.8]{Titelseite/Logo.pdf}  
 \end{center}
 
 \vspace{2.5cm}
