Fokusgruppe Kapitel fertig

--- a/Kapitel/Kapitel4.tex
+++ b/Kapitel/Kapitel4.tex
@@ -3,19 +3,48 @@
 In dieser Fokusgruppe wurde untersucht, wie Datenbrillen von Handwerkern aufgenommen werden und ob diese sich Szenarien vorstellen können, in welchen der Einsatz von Datenbrillen in ihrem Arbeitsumfeld hilfreich ist. Die Ursprüngliche Idee war dabei, dass Datenbrillen zur Unterstützung von Handwerkern eingesetzt werden, beispielsweise in Fernwartungsszenarien, wenn eine Person sehen möchte, was eine andere Person sieht, sich diese aber nicht am selben Ort befinden. Dann kann das Bild von der Brille des einen, zum Monitor des anderen übertragen werden. \\
 Im Folgenden werden dazu die Rahmenbedingungen und die Intention, die Durchführung, sowie die Auswertung der geäußerten Ideen beschrieben. Dabei kristallisierten sich zwei Anwendungsbereiche für AR heraus, die genauer beleuchtet werden, da sie zum weiteren Verlauf dieser Forschung beitragen.
 
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Resources/Fokusgruppe_pres.jpg}
+		\caption{Präsentation der Datenbrillen und Anwendungsbeispiele}
+	\end{center}
+\end{figure}
+
 \section{Rahmen}
 
-Um ein generelles Bild der Akzeptanz von Augmented Reality im Handwerk zu prüfen, wurde eine Fokusgruppe dazu in der Handwerkskammer München organisiert. Dazu wurden ca. 20 Handwerker aus verschiedenen handwerklichen Branchen eingeladen, um über das Thema zu diskutieren. Anfangs hielt der Moderator einen Vortrag über Augmented Reality allgemein, um den Teilnehmern die Technologie näher zu bringen. Anschließend standen verschiedene Datenbrillen, wie zum Beispiel Google Glass und die Microsoft HoloLens, zur Verfügung, welche von den Teilnehmern ausprobiert werden konnten. Die Forschungsfragen für den Workshop waren: "Was denken Handwerker über Augmented Reality, speziell Datenbrillen?" und "Können sich Handwerker Szenarien vorstellen, für welche der Einsatz von Datenbrillen für sie sinnvoll wäre?". Diese gab der Moderator den Testpersonen mit für das Testen der Brillen.
+Um ein generelles Bild der Akzeptanz von Augmented Reality im Handwerk zu prüfen, wurde eine Fokusgruppe dazu in der Handwerkskammer München organisiert. Dazu wurden ca. 20 Handwerker aus verschiedenen handwerklichen Branchen eingeladen, um über das Thema zu diskutieren. Anfangs hielt der Moderator einen Vortrag über Augmented Reality allgemein, um den Teilnehmern die Technologie näher zu bringen. Anschließend standen verschiedene Datenbrillen, wie zum Beispiel Google Glass und die Microsoft HoloLens (siehe Abbildung \ref{datenbrillen}), zur Verfügung, welche von den Teilnehmern ausprobiert werden konnten. Die Forschungsfragen für den Workshop waren: "Was denken Handwerker über Augmented Reality, speziell Datenbrillen?" und "Können sich Handwerker Szenarien vorstellen, für welche der Einsatz von Datenbrillen für sie sinnvoll wäre?". Diese gab der Moderator den Testpersonen mit für das Testen der Brillen.
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Resources/Datenbrillen.jpg}
+		\caption{Datenbrillen}
+		\label{datenbrillen}
+	\end{center}
+\end{figure}
 
 \section{Testen der Brillen}
 
 Für jede Brille wurde eine eigene Station aufgebaut. Das Augenmerk dieser Arbeit liegt auf der Microsoft HoloLens, da dieses die am weitesten fortgeschrittene Technologie ist. Es handelt sich dabei um eine große Brille, welche mit Kameras, die ihre Umgebung filmt, sowie Mikrofon und Lautsprechern ausgestattet ist. Sie erlaubt es im Sichtfeld des Nutzers Hologramme anzuzeigen und mit diesen zu interagieren. Dieser sieht dabei die "reale Welt", welche durch die Hologramme erweitert wird. In der Fachliteratur wird dies als \textbf{Augmented Reality} oder \textbf{Mixed Reality} bezeichnet, da es reale und virtuelle Welt verschmilzt.
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Resources/Fokusgruppe2.jpg}
+		\caption{Testen der Brillen durch Handwerker}
+	\end{center}
+\end{figure}
 
 Das Szenario, welches mit der HoloLens nachgespielt wurde, orientierte sich an der oben genannten ursprünglichen Idee. Dies wurde mit der Applikation Skype für HoloLens und PC nachgestellt. Die Skype Applikation für HoloLens ermöglicht es dem Nutzer mit anderen über das Internet zu telefonieren. Der Nutzer sieht dabei die Webcamübertragung seines Gesprächspartners in einem Fenster-Hologramm, welches er in seiner Umgebung positionieren kann und hört diesen über die Lautsprecher der Brille. Der Nutzer am Computer sieht einen Livestream der Aufnahmen der HoloLens. Er sieht also auch Hologramme, die dieser im Raum positioniert. Beide Kommunikationspartner können mit dem Livestream und dadurch miteinander interagieren. Sie können Pfeile einzeichnen, oder Bilder in der Umgebung des HoloLensträgers platzieren. 
 
 So ist es beispielsweise für den Brillenträger möglich dem Computernutzer ein Problem zu zeigen. Dieser kann ihn aus der Ferne beim Lösen assistieren, was in einem Laien-Experten Szenario hilfreich sein kann. Der Computernutzer erhält so einen guten Einblick in das Problem und direktes Feedback zu den Aktionen des Brillenträgers und seinen Anweisungen. Dadurch können sie sich besser abstimmen.
 
 \section{Diskussionsrunde}
+
+\begin{figure}[h]
+	\begin{center}
+		\noindent\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Resources/Fokusgruppe1.jpg}
+		\caption{Diskussion in der Fokusgruppe}
+	\end{center}
+\end{figure}
 
 Die Diskussionsrunde wurde an einer langen Tafel abgehalten. Der Moderator stellte noch einige Applikationen und Anwendungsmöglichkeiten von Augmented Reality vor, um die Fantasie der Teilnehmer anzuregen. Danach stellte er richtungsweisende Fragen, was die Diskussion anregte. Dabei kristallisierten sich schnell zwei gefragte Themenbereiche heraus: Augmented Reality als Assistent für den Handwerker zu nutzen, der ihn bei der Ausführung seiner Arbeit unterstützt und es als visuelles Tool für das Kundengespräch zu nutzen. Die meisten Ideen drehten sich um diese Anwendungsmöglichkeiten. Zusätzlich wurde aber auch Kritik an der Microsoft HoloLens geäußert, warum sie eventuell nicht genutzt werden kann.
 
