--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -1,3 +1,88 @@
+@misc{noauthor_neue_nodate,
+	title = {Neue {Studie} von {Bitkom} und {ZDH} zur {Digitalisierung} des {Handwerks}.},
+	url = {https://www.zdh.de/fachbereiche/wirtschaft-energie-umwelt/digitalisierung-im-handwerk/pressemitteilungen/neue-studie-von-bitkom-und-zdh-zur-digitalisierung-des-handwerks/},
+	abstract = {Neue Studie von Bitkom und ZDH zur Digitalisierung des Handwerks. ZDH-Geschäftsführer Schulte: „Die Chancen der Digitalisierung sind große. Wir helfen unseren Betrieben dabei, sie zu nutzen.},
+	language = {de},
+	urldate = {2019-01-03},
+	journal = {Zentralverband des Deutschen Handwerks e. V. (ZDH)},
+	file = {Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\6F2QEVPV\\neue-studie-von-bitkom-und-zdh-zur-digitalisierung-des-handwerks.html:text/html}
+}
+
+@inproceedings{hateful_six_krcmar,
+	author = "Fries, Veronika and  Pflügler, Christoph and  Wiesche, Manuel and  Krcmar, Helmut", 
+	title = "The hateful six - Factors Hindering Adoption of Innovation at small and medium sized Enterprises",
+	booktitle = "Twenty-second Americas Conference on Information Systems",
+	address = "San Diego, USA",
+	year = "2016",
+	abstract = "Adoption of innovations within small and middle-sized enterprises (SMEs) employing fewer than 250 employees is limited compared to large companies. Within the current study, our goal is to identify hindering factors influencing adoption of innovation within SMEs. To identify this, we conducted a case study on the usage of mobility related innovations within 20 small and medium-sized enterprises. We found six crucial factors hindering SMEs of adoption of innovations: perceived unbalance of risks and chances, compatibility with daily work routine, lacking fit in individual business processes, complexity in infrastructure investments, IT know how and amount of costs for setup. Our study contributes to an extended understanding of the theory of adoption of innovations. Based on the identification of these factors, the study provides practical implications for SMEs to integrate innovations into current business processes. The results foster the adoption of innovation within SMEs."
+}
+
+@article{allocca_innovation_2006,
+	title = {Innovation {Speed} in {Small} and {Medium}-{Sized} {Enterprises}},
+	volume = {15},
+	issn = {1467-8691},
+	url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1467-8691.2006.00389.x},
+	doi = {10.1111/j.1467-8691.2006.00389.x},
+	abstract = {In this era of fast-paced technological change companies are frequently forced to quickly bring innovative products to a competitive marketplace. Small and medium-sized enterprises (SMEs) play a key role in innovative contribution and growth of the global economy, yet face unique challenges with regard to new product development. To date scholars disagree on the effect of firm size on the antecedents and outcomes for innovation speed. We review the relevant literature, develop a conceptual model of innovation speed for SMEs and test it with 158 projects across several technology-related industries. Results revealed that SMEs had different speed antecedents from large firms, had their antecedents vary by radicalness and found speed to be synergistic with efficiency, quality and project success. Implications for managers and scholars are discussed.},
+	language = {en},
+	number = {3},
+	urldate = {2019-01-03},
+	journal = {Creativity and Innovation Management},
+	author = {Allocca, Michael A. and Kessler, Eric H.},
+	year = {2006},
+	pages = {279--295},
+	file = {Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\G7ZIB2PE\\Allocca and Kessler - 2006 - Innovation Speed in Small and Medium-Sized Enterpr.pdf:application/pdf;Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\JV4ZKYHI\\j.1467-8691.2006.00389.html:text/html}
+}
+
+@article{rothwell_small_1989,
+	title = {Small firms, innovation and industrial change},
+	volume = {1},
+	issn = {0921-898X, 1573-0913},
+	url = {http://link.springer.com/10.1007/BF00389916},
+	doi = {10.1007/BF00389916},
+	language = {en},
+	number = {1},
+	urldate = {2019-01-03},
+	journal = {Small Business Economics},
+	author = {Rothwell, Roy},
+	year = {1989},
+	pages = {51--64},
+	file = {Rothwell - 1989 - Small firms, innovation and industrial change.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\C79YUBAQ\\Rothwell - 1989 - Small firms, innovation and industrial change.pdf:application/pdf}
+}
+
+@article{kessler_innovation_1996,
+	title = {Innovation {Speed}: {A} {Conceptual} {Model} of {Context}, {Antecedents}, and {Outcomes}},
+	volume = {21},
+	issn = {0363-7425},
+	shorttitle = {Innovation {Speed}},
+	url = {https://www.jstor.org/stable/259167},
+	doi = {10.2307/259167},
+	abstract = {There is a growing recognition that innovation speed is important to a firm's creating and sustaining competitive advantage amidst rapidly changing business environments. However, there has been little theoretical advancement or model building regarding when innovation speed is appropriate, what factors speed up innovations, and how differences in speed affect project outcomes. In this article, we organize and integrate the innovation speed literature, develop a conceptual framework of innovation speed, and offer researchable propositions relating to the need for and antecedents and outcomes of innovation speed. Specifically, we argue that innovation speed (a) is most appropriate in environments characterized by competitive intensity, technological and market dynamism, and low regulatory restrictiveness; (b) can be positively or negatively affected by strategic-orientation factors and organizational-capability factors; and (c) has an influence on development costs, product quality, and ultimately project success.},
+	number = {4},
+	urldate = {2019-01-03},
+	journal = {The Academy of Management Review},
+	author = {Kessler, Eric H. and Chakrabarti, Alok K.},
+	year = {1996},
+	pages = {1143--1191}
+}
+
+@article{kessler_speeding_1999,
+	title = {Speeding up the pace of new product development},
+	volume = {16},
+	issn = {0737-6782},
+	url = {http://www.sciencedirect.com/science/article/pii/S0737678298000484},
+	doi = {10.1016/S0737-6782(98)00048-4},
+	abstract = {This study empirically investigates a wide array of factors that have been argued to differentiate fast from slow innovation processes from the perspective of the research and development organization. We test the effects of strategic orientation (criteria- and scope-related variables) and organizational capability (staffing- and structuring-related variables) on the speed of 75 new product development projects from ten large firms in several industries. Backward-elimination regression analysis revealed that (a) clear time-goals, longer tenure among team members, and parallel development increased speed, whereas (b) design for manufacturability, frequent product testing, and computer-aided design systems decreased speed. However, when projects were sorted by magnitude of change, different factors were found to influence the speed of radical and incremental projects. Moreover, some factors that sped up radical innovation (e.g., concept clarity, champion presence, co-location) were found to slow down incremental innovation. Together, the radical and incremental models explain differences in speed better than the general model. This suggests a contingency approach to speeding up innovation. Implications for researchers and managers are discussed.},
+	number = {3},
+	urldate = {2019-01-03},
+	journal = {Journal of Product Innovation Management},
+	author = {Kessler, Eric H and Chakrabarti, Alok K},
+	month = may,
+	year = {1999},
+	pages = {231--247},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\SCCG7Y4K\\Kessler and Chakrabarti - 1999 - Speeding up the pace of new product development.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\ZU2JW686\\S0737678298000484.html:text/html}
+}
+
 @incollection{schulz_quick_2012,
 	address = {Wiesbaden},
 	title = {Quick and easy!? {Fokusgruppen} in der angewandten {Sozialwissenschaft}},
@@ -15,6 +100,24 @@
 	doi = {10.1007/978-3-531-19397-7_1},
 	pages = {9--22},
 	file = {Springer Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\Z5EHFT2K\\Schulz - 2012 - Quick and easy! Fokusgruppen in der angewandten S.pdf:application/pdf}
+}
+
+@article{ritchie_ict_2005,
+	title = {{ICT} adoption by {SMEs}: implications for relationships and management},
+	volume = {20},
+	issn = {1468-005X},
+	shorttitle = {{ICT} adoption by {SMEs}},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1468-005X.2005.00154.x},
+	doi = {10.1111/j.1468-005X.2005.00154.x},
+	language = {en},
+	number = {3},
+	urldate = {2019-01-03},
+	journal = {New Technology, Work and Employment},
+	author = {Ritchie, Bob and Brindley, Clare},
+	month = nov,
+	year = {2005},
+	pages = {205--217},
+	file = {Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\4FCL76AQ\\j.1468-005X.2005.00154.html:text/html}
 }
 
 @incollection{bohnsack_gruppendiskussionsverfahren_2001,
