--- a/Master.tex
+++ b/Master.tex
@@ -27,6 +27,7 @@
 \setcounter{page}{1}
 
 % Kapitel einfügen.
+\input{Kapitel/Kapitel2.tex}
 \input{Kapitel/Kapitel3.tex}
 \input{Kapitel/Kapitel4.tex}
 \input{Kapitel/Kapitel5.tex}
